--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "ts-node": "^8.2.0"
   },
   "devDependencies": {
+    "@nuxt/typescript": "^2.8.1",
     "nodemon": "^1.18.9"
   }
 }
