--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "form-data": "^2.3.3",
     "nuxt": "^2.0.0",
     "ts-node": "^8.2.0"
   },
